added some missing properties

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -22,6 +22,8 @@ vamping.innateUndead=0.040
 [map]
 map.horizontalFactor=1.200
 map.verticalFactor=0.600
+map.shout.range=40.000
+map.shout.sizeFactor=4.000
 [damage]
 damage.damrollCap=39.000
 damage.eliteBonus=1.300
@@ -123,7 +125,7 @@ damage.totalOutput.racial.Dracolich=1.100
 damage.totalOutput.racial.Slime=1.000
 damage.totalOutput.racial.Githzerai=1.000
 damage.totalOutput.racial.Angel=1.050
-damage.totalOutput.racial.Raksasha=1.000
+damage.totalOutput.racial.Rakshasa=1.000
 damage.pulse.racial.None=13.000
 damage.pulse.racial.Human=14.000
 damage.pulse.racial.Barbarian=15.000
@@ -189,7 +191,7 @@ damage.pulse.racial.Dracolich=14.000
 damage.pulse.racial.Slime=12.000
 damage.pulse.racial.Githzerai=13.000
 damage.pulse.racial.Angel=12.000
-damage.pulse.racial.Raksasha=12.000
+damage.pulse.racial.Rakshasa=12.000
 damage.totalOutput.class.None=1.000
 damage.totalOutput.class.Warrior=1.000
 damage.totalOutput.class.Ranger=1.000
@@ -310,6 +312,11 @@ spell.area.minChance.banish=5.000
 spell.area.chanceStep.banish=70.000
 spell.area.minChance.superNova=50.000
 spell.area.chanceStep.superNova=10.000
+spell.divineBlessing.areaShrugAlign=970.000
+spell.divineBlessing.parryAlign=990.000
+spell.divineBlessing.parryChance=10.000
+spell.divineBlessing.areaShrugChance=5.000
+spell.divineBlessing.singleShrugChance=10.000
 [equipment]
 timer.stoneskin.artifact.avenger=16.000
 timer.stoneskin.artifact.sunblade=45.000
@@ -980,16 +987,16 @@ stats.wis.Angel=150.000
 stats.cha.Angel=150.000
 stats.kar.Angel=150.000
 stats.luc.Angel=110.000
-stats.str.Raksasha=100.000
-stats.dex.Raksasha=100.000
-stats.agi.Raksasha=120.000
-stats.con.Raksasha=100.000
-stats.pow.Raksasha=100.000
-stats.int.Raksasha=100.000
-stats.wis.Raksasha=100.000
-stats.cha.Raksasha=100.000
-stats.kar.Raksasha=100.000
-stats.luc.Raksasha=100.000
+stats.str.Rakshasa=100.000
+stats.dex.Rakshasa=100.000
+stats.agi.Rakshasa=120.000
+stats.con.Rakshasa=100.000
+stats.pow.Rakshasa=100.000
+stats.int.Rakshasa=100.000
+stats.wis.Rakshasa=100.000
+stats.cha.Rakshasa=100.000
+stats.kar.Rakshasa=100.000
+stats.luc.Rakshasa=100.000
 [innates]
 innate.shrug.Dragonkin=20.000
 innate.shrug.Illithid=70.000
@@ -1017,7 +1024,8 @@ innate.timer.pyrokinesis=20.000
 innate.timer.drainLife=60.000
 innate.timer.hatred=4.000
 innate.timer.foundry=120.000
-innate.timer.planeShift=20.000
+innate.timer.planeShift=120.000
+innate.timer.shift_prime=720.000
 [misfire]
 misfire.zoning.maxGroup=10.000
 misfire.pvp.maxDiff=20.000
@@ -1041,6 +1049,7 @@ skill.notch.shriek=6.000
 skill.notch.quickChant=40.000
 skill.notch.hardcoreBonus=0.600
 skill.notch.pyrokinetics=50.000
+skill.notch.fishing=70.000
 skill.cost.practice=5111.000
 skill.cap.multi.mod.primarySkill=0.960
 skill.cap.multi.mod.secondarySkill=0.900
