pals and ap's can now only summon mounts 2x a day

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1028,6 +1028,7 @@ innate.timer.hatred=4.000
 innate.timer.foundry=120.000
 innate.timer.planeShift=120.000
 innate.timer.shift_prime=720.000
+innate.timer.summonMount=720.000
 innate.dualDaggers.pulse=-3.000
 # heals = heals * ( healing_mod * level ) / 100
 innate.paladin_aura.healing_mod=0.200
