added some epic properties

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1158,6 +1158,10 @@ epic.forLevel.53=1000.000
 epic.forLevel.54=2000.000
 epic.forLevel.55=4000.000
 epic.forLevel.56=8000.000
+epic.list.limit=10
+epic.zoneTrophy.size=40.000
+epic.zoneTrophy.mod=0.800
+epic.zoneTrophy.maxMods=4.000
 [auctions]
 auctions.defaultLength=172800.00
 auctions.bidTimeExtension=600.00
