--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -287,6 +287,8 @@ timer.mins.summonBlizzard=3.000
 timer.mins.summonFamiliar=10.000
 timer.mins.exhume=10.000
 timer.secs.monkCombination=30.000
+timer.mins.physicalNotch=5.000
+timer.mins.mentalNotch=10.000
 [associations]
 guild.maxOutposts=2.000
 guild.outpost.maxGolem=2.000
