added +5 save_fear penalty for centaurs

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1115,6 +1115,7 @@ saves.spell.racial.Barbarian=10.000
 saves.para.racial.Barbarian=10.000
 saves.breath.racial.Barbarian=10.000
 saves.petri.racial.Barbarian=10.000
+saves.petri.racial.Centaur=25.000
 saves.spell.racial.DrowElf=-10.000
 saves.spell.racial.GreyElf=-10.000
 saves.spell.racial.Minotaur=15.000
