added epic.frag.threshold and epic.frag.amount

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1168,6 +1168,8 @@ epic.list.limit=10.000
 epic.zoneTrophy.size=30.000
 epic.zoneTrophy.mod=0.900
 epic.zoneTrophy.maxMods=5.000
+epic.frag.threshold=0.10
+epic.frag.amount=20.00
 [auctions]
 auctions.defaultLength=172800.000
 auctions.bidTimeExtension=600.000
