--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1191,3 +1191,5 @@ ship.sinking.rewardDivider=3.000
 [shops]
 shops.sellTrophyMod=0.050
 shops.sellMinPct=0.100
+[mobspecs]
+mobspecs.rename.price=5000000
