tweaked mob hp, added nexus stone props

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -340,7 +340,7 @@ timer.proc.bracerOfWhirlwinds=300.000
 [stats]
 mana.powMultiplier=0.028
 hitpoints.mob.conFactor=0.400
-hitpoints.mob.NpcPcRatio=1.000
+hitpoints.mob.NpcPcRatio=1.450
 hitpoints.mob.eliteBonus=3.000
 hitpoints.conMultiplier=0.035
 hitpoints.class.None=1.000
@@ -1220,3 +1220,8 @@ portals.gate.initTimeout=0
 portals.gate.postEnterTimeout=0
 portals.gate.postEnterLag=0
 portals.gate.decayTimeout=240
+[nexusStones]
+nexusStones.touchTimerSecs=600
+nexusStones.turnTimerSecs=3600
+nexusStones.epicsMin=50
+nexusStones.epicsMax=70
