--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1203,6 +1203,7 @@ shops.sellTrophyMod=0.050
 shops.sellMinPct=0.100
 [mobspecs]
 mobspecs.rename.price=5000000
+mobspecs.taskClear.price=10000000
 [portals]
 portals.etherportal.maxToPass=5
 portals.etherportal.initTimeout=5
