--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1191,6 +1191,8 @@ epic.freqMod.min=0.250
 epic.freqMod.max=1.700
 epic.showCompleted.delaySecs=1800.000
 epic.eliteMob=3.000
+epic.errand.penaltyMod=0.250
+epic.errand.completeBonusMod=1.500
 [auctions]
 auctions.defaultLength=172800.000
 auctions.bidTimeExtension=600.000
