--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1093,6 +1093,7 @@ skill.notch.spellWeave=150.000
 skill.notch.bandage=30.000
 skill.notch.guard=5.000
 skill.notch.cleave=10.000
+skill.notch.groundCasting=60.000
 skill.cost.practice=5111.000
 skill.cap.multi.mod.primarySkill=0.960
 skill.cap.multi.mod.secondarySkill=0.900
