--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -34,6 +34,7 @@ map.verticalFactor=0.600
 map.shout.range=40.000
 map.shout.sizeFactor=4.000
 [damage]
+damage.spell.multiplier=1.05
 damroll.mod=0.900
 damage.mob.bonus=1.250
 damage.damrollCap=39.000
@@ -81,7 +82,7 @@ damage.totalOutput.racial.MountainDwarf=1.000
 damage.totalOutput.racial.DuergarDwarf=1.000
 damage.totalOutput.racial.Halfling=1.000
 damage.totalOutput.racial.Gnome=1.000
-damage.totalOutput.racial.Ogre=1.060
+damage.totalOutput.racial.Ogre=1.700
 damage.totalOutput.racial.Troll=1.000
 damage.totalOutput.racial.Half-Elf=0.980
 damage.totalOutput.racial.Illithid=1.000
@@ -139,14 +140,14 @@ damage.totalOutput.racial.Angel=1.050
 damage.totalOutput.racial.Rakshasa=1.000
 damage.pulse.racial.None=13.000
 damage.pulse.racial.Human=13.000
-damage.pulse.racial.Barbarian=14.000
+damage.pulse.racial.Barbarian=13.000
 damage.pulse.racial.DrowElf=12.000
 damage.pulse.racial.GreyElf=12.000
 damage.pulse.racial.MountainDwarf=13.000
 damage.pulse.racial.DuergarDwarf=13.000
 damage.pulse.racial.Halfling=12.000
 damage.pulse.racial.Gnome=13.000
-damage.pulse.racial.Ogre=14.000
+damage.pulse.racial.Ogre=20.000
 damage.pulse.racial.Troll=14.000
 damage.pulse.racial.Half-Elf=13.000
 damage.pulse.racial.Illithid=14.000
@@ -165,7 +166,7 @@ damage.pulse.racial.ShadowBeast=12.000
 damage.pulse.racial.StormGiant=14.500
 damage.pulse.racial.Wight=14.500
 damage.pulse.racial.Phantom=13.000
-damage.pulse.racial.Harpy=12.000
+damage.pulse.racial.Harpy=10.000
 damage.pulse.racial.Gargoyle=13.000
 damage.pulse.racial.FireElemental=13.000
 damage.pulse.racial.AirElemental=13.000
