allow multis to continue exping, but at higher epic requirement

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -285,6 +285,8 @@ exp.required.60=20000000.000
 exp.required.65=20000000.000
 exp.maxSkillChance=10.000
 exp.maxExpLevel=46.000
+exp.maxMultiLevel=55.000
+exp.multiEpicMultiplier=4.000
 exp.groupLimit.good=10.000
 exp.groupLimit.evil=6.000
 exp.factor.paladin.vsEvil=1.150
