--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1117,6 +1117,8 @@ skill.shieldBlock.blessBonus=1.200
 skill.guard.agiDiffMaxBonus=5.000
 skill.guard.guardFightingPenalty=5.000
 skill.criticalAttack.disarm.dropChance=5.000
+skill.shieldCombat.ACBonusMultiplier=0.500
+skill.improvedShieldCombat.damageMultiplier=1.000
 [terrains]
 terrain.forest.lostChance=0.000
 movement.forest.lostChance=0.000
