--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -84,7 +84,7 @@ damage.totalOutput.racial.MountainDwarf=1.000
 damage.totalOutput.racial.DuergarDwarf=1.000
 damage.totalOutput.racial.Halfling=1.000
 damage.totalOutput.racial.Gnome=1.000
-damage.totalOutput.racial.Ogre=1.400
+damage.totalOutput.racial.Ogre=1.250
 damage.totalOutput.racial.Troll=1.000
 damage.totalOutput.racial.Half-Elf=0.980
 damage.totalOutput.racial.Illithid=1.000
@@ -287,12 +287,13 @@ exp.required.60=20000000.000
 exp.required.65=20000000.000
 exp.maxSkillChance=10.000
 exp.maxExpLevel=46.000
-exp.maxMultiLevel=55.000
-exp.multiEpicMultiplier=4.000
+exp.maxMultiLevel=56.000
+exp.multiEpicMultiplier=3.000
 exp.groupLimit.good=10.000
 exp.groupLimit.evil=6.000
 exp.factor.paladin.vsEvil=1.150
 exp.factor.antipaladin.vsGood=1.050
+exp.factor.Human=2.000
 [groups]
 groups.size.max.good=13.000
 groups.size.max.evil=13.000
@@ -467,7 +468,7 @@ stats.luc.Halfling=125.000
 stats.str.Gnome=85.000
 stats.dex.Gnome=110.000
 stats.agi.Gnome=110.000
-stats.con.Gnome=106.000
+stats.con.Gnome=113.000
 stats.pow.Gnome=100.000
 stats.int.Gnome=140.000
 stats.wis.Gnome=105.000
@@ -1158,8 +1159,8 @@ saves.spell.racial.Wight=30.000
 saves.para.racial.Wight=25.000
 saves.breath.racial.Wight=25.000
 saves.petri.racial.Wight=25.000
-saves.spell.racial.Ogre=30.000
-saves.para.racial.Ogre=10.000
+saves.spell.racial.Ogre=35.000
+saves.para.racial.Ogre=15.000
 saves.breath.racial.Ogre=-10.000
 saves.petri.racial.Ogre=-10.000
 saves.spell.racial.StormGiant=20.000
