--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1109,6 +1109,8 @@ skill.notch.guard=5.000
 skill.notch.cleave=10.000
 skill.notch.groundCasting=60.000
 skill.notch.chants=100.000
+skill.notch.slip=1.000
+skill.slip.fightingPenalty=20.000
 skill.cost.practice=5111.000
 skill.cap.multi.mod.primarySkill=0.960
 skill.cap.multi.mod.secondarySkill=0.900
