--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -41,7 +41,7 @@ damage.mob.bonus=1.000
 damage.damrollCap=39.000
 damage.eliteBonus=1.300
 damage.reduction.sanctuary=0.800
-damage.reduction.sanctuary.paladin.groupMod=0.020
+damage.reduction.sanctuary.paladin.groupMod=0.030
 damage.reduction.trollskin=0.850
 damage.reduction.barkskin=0.850
 damage.reduction.ironwood=0.800
@@ -79,7 +79,7 @@ damage.meleeFactor=1.000
 damage.modifier.weaponDice=1.200
 damage.totalOutput.racial.None=1.000
 damage.totalOutput.racial.Human=1.000
-damage.totalOutput.racial.Barbarian=1.000
+damage.totalOutput.racial.Barbarian=1.010
 damage.totalOutput.racial.DrowElf=0.950
 damage.totalOutput.racial.GreyElf=0.970
 damage.totalOutput.racial.MountainDwarf=1.000
@@ -94,7 +94,7 @@ damage.totalOutput.racial.Orc=1.000
 damage.totalOutput.racial.Thri-Kreen=0.850
 damage.totalOutput.racial.Centaur=1.000
 damage.totalOutput.racial.Githyanki=0.980
-damage.totalOutput.racial.Minotaur=1.000
+damage.totalOutput.racial.Minotaur=1.015
 damage.totalOutput.racial.Shade=1.000
 damage.totalOutput.racial.Revenant=1.000
 damage.totalOutput.racial.Goblin=1.000
@@ -409,6 +409,7 @@ timer.mins.physicalNotch=6.000
 timer.mins.mentalNotch=12.000
 timer.secs.mob.skinRefresh=60.000
 timer.mins.statPool=1440.000
+innate.timer.layHands=720.000
 [associations]
 guild.maxOutposts=2.000
 guild.outpost.maxGolem=2.000
@@ -512,7 +513,7 @@ stats.kar.Barbarian=100.000
 stats.luc.Barbarian=100.000
 stats.str.DrowElf=85.000
 stats.dex.DrowElf=120.000
-stats.agi.DrowElf=145.000
+stats.agi.DrowElf=125.000
 stats.con.DrowElf=75.000
 stats.pow.DrowElf=125.000
 stats.int.DrowElf=130.000
@@ -1161,8 +1162,7 @@ innate.timer.foundry=120.000
 innate.timer.planeShift=80.000
 innate.timer.shift_prime=720.000
 innate.timer.summonMount=720.000
-innate.dualDaggers.pulse=-3.000
-innate.paladins.layHandsHealMax=300.000
+innate.dualDaggers.pulse=-1.000
 # heals = heals * ( healing_mod * level ) / 100
 innate.paladin_aura.healing_mod=0.200
 # dam = dam * ( battlelust_mod * level) / 100
