--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1397,10 +1397,16 @@ grapple.misfire.leglock=10.000
 grapple.misfire.casting=50.000
 grapple.bearhug.duration=3.000
 grapple.bearhug.dmgmod=1.000
+grapple.bearhug.size.down=1.000
+grapple.bearhug.size.up=1.000
+grapple.bearhug.size.mob=1.000
 grapple.headlock.duration=2.000
 grapple.headlock.dmgMultiplier.norm=2.000
 grapple.headlock.dmgMultiplier.combo=3.000
 grapple.headlock.duration.knockout=10.000
+grapple.headlock.size.up=1.000
+grapple.headlock.size.down=2.000
+grapple.headlock.size.mob=3.000
 grapple.armlock.break.chance=10.000
 grapple.armlock.duration=1.100
 grapple.armlock.duration.offbal=2.000
@@ -1410,5 +1416,10 @@ grapple.leglock.duration=2.000
 grapple.leglock.dmgMultiplier.norm=2.000
 grapple.leglock.dmgMultiplier.combo=3.000
 grapple.leglock.break.dmgmod=1.000
+grapple.leglock.size.up=1.000
+grapple.leglock.size.down=2.000
+grapple.leglock.size.mob=3.000
 grapple.groundslam.dmgmod=1.000
 grapple.groundslam.duration=2.000
+grapple.groundslam.size.up=2.000
+grapple.groundslam.size.down=2.000
