some property changes

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -29,6 +29,7 @@ vamping.holySacrifice=0.100
 vamping.vampiricTrance=0.200
 vamping.undeadNpc=0.100
 vamping.innateUndead=0.040
+vamping.battletide=0.250
 [map]
 map.horizontalFactor=1.200
 map.verticalFactor=0.600
@@ -58,6 +59,7 @@ damage.reduction.wet=0.800
 damage.reduction.stoneSkin=0.750
 damage.reduction.shadowShield=0.750
 damage.reduction.biofeedback=0.650
+damage.reduction.ironwood=0.800
 damage.reduction.skinSpell.deduct=46.000
 damage.increase.coldWrithe=2.000
 damage.increase.ironwood=1.800
@@ -654,10 +656,10 @@ stats.wis.Orc=95.000
 stats.cha.Orc=80.000
 stats.kar.Orc=100.000
 stats.luc.Orc=100.000
-stats.str.Orog=125.000
+stats.str.Orog=128.000
 stats.dex.Orog=80.000
 stats.agi.Orog=80.000
-stats.con.Orog=133.000
+stats.con.Orog=130.000
 stats.pow.Orog=55.000
 stats.int.Orog=40.000
 stats.wis.Orog=90.000
@@ -724,16 +726,16 @@ stats.wis.Revenant=75.000
 stats.cha.Revenant=50.000
 stats.kar.Revenant=100.000
 stats.luc.Revenant=100.000
-stats.str.Goblin=85.000
-stats.dex.Goblin=130.000
-stats.agi.Goblin=120.000
-stats.con.Goblin=105.000
-stats.pow.Goblin=90.000
-stats.int.Goblin=105.000
-stats.wis.Goblin=130.000
-stats.cha.Goblin=80.000
+stats.str.Goblin=95.000
+stats.dex.Goblin=95.000
+stats.agi.Goblin=115.000
+stats.con.Goblin=115.000
+stats.pow.Goblin=85.000
+stats.int.Goblin=70.000
+stats.wis.Goblin=133.000
+stats.cha.Goblin=75.000
 stats.kar.Goblin=100.000
-stats.luc.Goblin=115.000
+stats.luc.Goblin=100.000
 stats.str.Lich=100.000
 stats.dex.Lich=100.000
 stats.agi.Lich=100.000
@@ -1289,7 +1291,8 @@ innate.timer.foundry=120.000
 innate.timer.planeShift=80.000
 innate.timer.shift_prime=720.000
 innate.timer.summonMount=720.000
-innate.dualDaggers.pulse=-1.000
+innate.dualDaggers.pulse=-3.000
+innate.timer.layHands=720.000
 # heals = heals * ( healing_mod * level ) / 100
 innate.paladin_aura.healing_mod=0.200
 # dam = dam * ( battlelust_mod * level) / 100
