some properties adjustments

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -428,6 +428,7 @@ exp.factor.Duergar=0.500
 exp.factor.Githyanki=0.500
 exp.factor.Troll=0.500
 exp.factor.Ogre=0.500
+exp.factor.Orog=0.750
 exp.zoneDifficulty.factor=0.500
 exp.zoneTrophy.threshold.notches=3.000
 exp.zoneTrophy.scale.notches=10.000
