--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -435,6 +435,7 @@ exp.zoneTrophy.scale.notches=20.000
 exp.zoneTrophy.others.reductionPct=0.010
 exp.zoneTrophy.update.secs=3600.000
 exp.zoneTrophy.update.multiplier=0.995
+exp.goodieDeathExpLossLevelThreshold=30.000
 [groups]
 groups.size.max.good=13.000
 groups.size.max.evil=13.000
