updated prestige update properties

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1626,7 +1626,8 @@ archery.cursedArrows.mod=1.000
 archery.enchantArrows.mark.duration=300.000
 [prestige]
 prestige.update.secs=7200.000
-prestige.update.multiplier=0.999
+prestige.update.decrease.kingdom=2.000
+prestige.update.decrease.guild=1.000
 [poison]
 poison.maxDuration.min=10.000
 [ascend]
