added damage reduction properties for berserk, reduced spec godcall timer a hair, lowered reaver hitpoints

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -46,6 +46,7 @@ damage.reduction.sanctuary.paladin.groupMod=0.030
 damage.reduction.trollskin=0.850
 damage.reduction.barkskin=0.850
 damage.reduction.ironwood=0.800
+damage.reduction.berserk=0.900
 damage.reduction.soulshield.melee=0.800
 damage.reduction.soulshield.spell=0.800
 damage.reduction.protLiving=0.800
@@ -63,6 +64,7 @@ damage.reduction.ironwood=0.800
 damage.reduction.skinSpell.deduct=46.000
 damage.increase.coldWrithe=2.000
 damage.increase.ironwood=1.800
+damage.increase.berserk=1.200
 damage.increase.barkskin=1.150
 damage.increase.elementalist=1.150
 damage.increase.fireColdShield=2.000
@@ -441,7 +443,7 @@ groups.size.max.good=13.000
 groups.size.max.evil=13.000
 [timers]
 timer.innate.godCall=900.000
-timer.innate.godCallSpec=900.000
+timer.innate.godCallSpec=750.000
 timer.decay.corpse.pc=120.000
 timer.decay.corpse.npc=15.000
 timer.mins.planetaryAlignment=3.000
@@ -557,7 +559,7 @@ hitpoints.class.Warlock=0.800
 hitpoints.class.MindFlayer=0.400
 hitpoints.class.Alchemist=0.800
 hitpoints.class.Berserker=0.750
-hitpoints.class.Reaver=0.750
+hitpoints.class.Reaver=0.650
 hitpoints.class.Illusionist=0.500
 hitpoints.class.Unholy-Piper=0.900
 hitpoints.class.Dreadlord=0.550
