and forgot of adding one property, oops

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1368,6 +1368,7 @@ innate.paladin_aura.precision_hitroll_mod=0.200
 innate.paladin_aura.endurance_move_mod=1.000
 # +hp = vigor_hp_mod * level
 innate.paladin_aura.vigor_hp_mod=1.000
+innate.branchDumper=0.950
 [misfire]
 misfire.zoning.maxGroup=13.000
 misfire.pvp.maxDiff=20.000
