capped wizard eye distance on map to 100 (governed by a property), added check for merciful attackers in tranquility spell.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -525,6 +525,7 @@ spell.windTunnel.archery=1.300
 spell.plague.spread.perc=30.000
 spell.plague.spread.time=60.000
 spell.plague.duration=2.000
+spell.wizardEye.maxDistance=100.00
 [equipment]
 timer.stoneskin.artifact.avenger=20.000
 timer.stoneskin.artifact.sunblade=45.000
