--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -13,6 +13,7 @@ artifact.feeding.epic.typeMod.eliteMob=1.000
 artifact.feeding.epic.typeMod.quest=1.000
 artifact.feeding.epic.typeMod.randomZone=1.000
 artifact.feeding.epic.typeMod.nexusStone=1.000
+artifact.feeding.switch.timer.min=120.000
 [backstab]
 #final multiplier is applied to both dices and damroll
 backstab.finalMultiplier=4.000
