--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -20,6 +20,9 @@ artifact.feeding.switch.lootallowance.min=30.000
 backstab.finalMultiplier=4.000
 #multiplier for dice only
 backstab.diceMultiplier=2.800
+[dragons]
+dragon.Breath.savedDamage=2.000
+dragon.Breath.DamageMod=1.000
 [vamping]
 vamping.vampiricTouch=0.250
 vamping.vampiricTouch.monks=0.035
@@ -442,9 +445,9 @@ exp.factor.Ogre=0.500
 exp.factor.Orog=0.750
 exp.factor.Illithid=0.200
 exp.zoneDifficulty.factor=0.050
-exp.zoneTrophy.threshold.notches=4.000
+exp.zoneTrophy.threshold.notches=8.000
 exp.zoneTrophy.scale.notches=20.000
-exp.zoneTrophy.others.reductionPct=0.010
+exp.zoneTrophy.others.reductionPct=0.050
 exp.zoneTrophy.update.secs=3600.000
 exp.zoneTrophy.update.multiplier=0.990
 exp.goodieDeathExpLossLevelThreshold=30.000
@@ -573,7 +576,7 @@ hitpoints.class.Thief=0.800
 hitpoints.class.Warlock=0.800
 hitpoints.class.MindFlayer=0.400
 hitpoints.class.Alchemist=0.800
-hitpoints.class.Berserker=0.800
+hitpoints.class.Berserker=0.850
 hitpoints.class.Reaver=0.650
 hitpoints.class.Illusionist=0.500
 hitpoints.class.Unholy-Piper=0.900
@@ -792,7 +795,7 @@ stats.kar.Goblin=100.000
 stats.luc.Goblin=100.000
 stats.str.Lich=85.000
 stats.dex.Lich=75.000
-stats.agi.Lich=75.000
+stats.agi.Lich=100.000
 stats.con.Lich=100.000
 stats.pow.Lich=180.000
 stats.int.Lich=140.000
@@ -1050,8 +1053,8 @@ stats.wis.Snake=10.000
 stats.cha.Snake=100.000
 stats.kar.Snake=100.000
 stats.luc.Snake=100.000
-stats.str.Insect=20.000
-stats.dex.Insect=10.000
+stats.str.Insect=80.000
+stats.dex.Insect=120.000
 stats.agi.Insect=150.000
 stats.con.Insect=90.000
 stats.pow.Insect=10.000
@@ -1433,7 +1436,7 @@ skill.notch.cleave=10.000
 skill.notch.groundCasting=60.000
 skill.notch.chants=100.000
 skill.notch.slip=40.000
-skill.notch.bearhug=5.000
+skill.notch.bearhug=7.000
 skill.notch.headlock=5.000
 skill.notch.armlock=5.000
 skill.notch.leglock=5.000
@@ -1473,6 +1476,7 @@ random.drop.piece.percentage=20.000
 random.drop.equip.percentage=4.000
 random.drop.modifier.hardcore=150.000
 random.drop.modifier.quality=80.000
+random.drop.luck.divisor=15.000
 [saves]
 saves.spell.starting=70.000
 saves.spell.top=30.000
@@ -1659,13 +1663,12 @@ track.scan.lag=1.000
 [archery]
 archery.dexPerShot=40.000
 archery.strPerRoomRange=40.000
-archery.hitPenalty=0.700
-archery.rangePenalty=20.000
-archery.diceFactor=8.000
-archery.hitrollFactor=1.000
+archery.hitPenalty=0.900
+archery.rangePenalty=10.000
+archery.diceFactor=3.500
+archery.hitrollFactor=0.750
 archery.cursedArrows.mod=1.000
 archery.enchantArrows.mark.duration=300.000
-archery.enchantArrows.damage.mod 2.000
 [prestige]
 prestige.update.secs=5400.000
 prestige.update.decrease.kingdom=200.000
