--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1484,6 +1484,8 @@ skill.Sweeping.Thrust.ChanceToHit=1.000
 skill.Sweeping.Thrust.Victim.Lag=1.200
 skill.bash.NPC_Modifier=1.200
 skill.tackle.DeviousnessModifier=0.500
+skill.lance.charge.KnockDownMod=0.650
+skill.lance.charge.VictimLag=1.000
 [terrains]
 terrain.forest.lostChance=0.000
 movement.forest.lostChance=0.000
