Added song of harming damage mod property.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1499,6 +1499,7 @@ memorize.factor.commune=0.900
 memorize.factor.npc=1.000
 [bards]
 bard.instrumentFactor=0.350
+song.bard.harming.mod=1.000
 [random_equip]
 random.drop.piece.percentage=20.000
 random.drop.equip.percentage=4.000
