Duris properties update.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -578,8 +578,7 @@ kick.wallkick.victimlag=1.500
 kick.groinkick.victimlag=1.000
 [stats]
 mana.powMultiplier=0.028
-hitpoints.spellcaster.maxConBonus=3.000
-hitpoints.non.spellcaster.maxConBonus=1.000
+hitpoints.spellcaster.maxConBonus=10.000
 hitpoints.mob.conFactor=0.400
 hitpoints.mob.NpcPcRatio=1.450
 hitpoints.mob.eliteBonus=3.000
@@ -1500,8 +1499,11 @@ skill.SweepingThrust.lag=1.500
 skill.Sweeping.Thrust.ChanceToHit=1.000
 skill.Sweeping.Thrust.Victim.Lag=1.200
 skill.bash.NPC_Modifier=1.200
-skill.tackle.DeviousnessModifier=0.500
+skill.tackle.DeviousnessModifier=0.750
 skill.tackle.AffectedSkillBash=3.000
+skill.tackle.WwrongSize.Lag=0.500
+skill.tackle.TacklerLag=2.000
+skill.tackle.VictimLag=2.000
 skill.lance.charge.KnockDownMod=0.650
 skill.lance.charge.VictimLag=1.000
 skill.headbutt.damfactor=1.000
