added guardians bulwark property and made the charisma checks on conjuring elementals a bit more forgiving

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -99,6 +99,7 @@ damage.eliteBonus=1.300
 damage.reduction.sanctuary=0.780
 damage.reduction.sanctuary.paladin.groupMod=0.030
 damage.reduction.trollskin=0.750
+damage.reduction.guardians.bulwark=0.850
 damage.reduction.barkskin=0.950
 damage.reduction.berserk=0.900
 damage.reduction.soulshield.melee=0.900
@@ -1931,8 +1932,8 @@ look.showquestgiver.maxlvl=30.000
 [Epic skills]
 epic.skill.toughness=0.500
 [Elemental summoning]
-summon.greater.elemental.charisma=140.000
-summon.lesser.elemental.charisma=140.000
+summon.greater.elemental.charisma=125.000
+summon.lesser.elemental.charisma=115.000
 [Witch doctor]
 epic.witch.multiplier=1.250
 [Movement regen]
