--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -2071,7 +2071,7 @@ stats.sell.log=20000.000
 pvp.eq.poof.chance=1.000
 pvp.eq.poof.niceeq.chance.multiplier=2.000
 [guildhalls]
-guildhalls.construction.platinum.main=100000.000
+guildhalls.construction.platinum.main=50000.000
 guildhalls.construction.points.main=50.000
 guildhalls.construction.platinum.room=2500.000
 guildhalls.construction.points.room=10.000
@@ -2081,11 +2081,13 @@ guildhalls.construction.platinum.golem.cleric=6000.000
 guildhalls.construction.points.golem.cleric=6.000
 guildhalls.construction.platinum.golem.sorcerer=7000.000
 guildhalls.construction.points.golem.sorcerer=7.000
+guildhalls.construction.platinum.rename=1000.000
+guildhalls.construction.points.rename=1.000
 guildhalls.construction.platinum.upgrade.window=10000.000
 guildhalls.construction.points.upgrade.window=15.000
 guildhalls.construction.platinum.upgrade.heal=7500.000
 guildhalls.construction.points.upgrade.heal=10.000
 guildhalls.construction.platinum.upgrade.bank=15000.000
 guildhalls.construction.points.upgrade.bank=25.000
-guildhalls.construction.platinum.rename=1000.000
-guildhalls.construction.points.rename=1.000
+guildhalls.construction.platinum.upgrade.town_portal=20000.000
+guildhalls.construction.points.upgrade.town_portal=30.000
