Removed some unsued ship properties and added ship.contraband.confiscationChanceModifier, set for now at 1 (this allows us to adjust the chance of contraband being confiscated via a property)

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1762,11 +1762,9 @@ auctions.listingFee=1000.000
 auctions.startPricePctFee=0.040
 auctions.closingPctFee=0.060
 [ships]
-ship.toggle.master=0.000
 warship.sails.damage.reduction=0.850
 ship.sinking.rewardDivider=3.000
-ship.cargo.contrabandSellMultiplier=1.400
-ship.cargo.regularSellMultiplier=1.500
+ship.contraband.confiscationChanceModifier=1.000
 [shops]
 shops.sellTrophyMod=0.050
 shops.sellMinPct=0.100
