Making it so quest abandon cost reduces over a period of 24 hours.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -571,7 +571,7 @@ exp.zoneTrophy.others.reductionPct=0.050
 exp.zoneTrophy.update.secs=3600.000
 exp.zoneTrophy.update.multiplier=0.990
 exp.goodieDeathExpLossLevelThreshold=30.000
-exp.min.lvl.see.numbers=51.000
+exp.min.lvl.see.numbers=19.000
 [groups]
 groups.size.max.good=30.000
 groups.size.max.evil=30.000
@@ -2178,6 +2178,7 @@ world.quest.exp.level.40.andUnder=1.200
 world.quest.exp.level.50.andUnder=0.500
 world.quest.exp.level.55.andUnder=0.200
 world.quest.exp.level.other.andUnder=0.015
+world.quest.cost.abandon.time=24.000
 [Sales]
 stats.sell.log=20000.000
 [EQ Poofing]
