--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -700,6 +700,24 @@ spell.judgement.dam.modifier.apnecro=1.000
 spell.judgement.maxAffected=4.000
 spell.disintegrate.max.eq.dmg=10.000
 spell.disintegrate.burn.dmg=3.000
+spell.area.damage.factor.doom=1.000
+spell.area.damage.factor.nova=1.000
+spell.area.damage.factor.incendiary=1.000
+spell.area.damage.factor.meteorswarm=1.000
+spell.area.damage.factor.squall=1.000
+spell.area.damage.factor.firestorm=1.000
+spell.area.damage.factor.icestorm=1.000
+spell.area.damage.factor.holyword=1.000
+spell.area.damage.factor.unholyword=1.000
+spell.area.damage.factor.scathingwind=1.000
+spell.area.damage.factor.deathfield=1.000
+spell.area.damage.factor.summonghasts=1.000
+spell.area.damage.factor.gpythonsting=1.000
+spell.area.damage.factor.earthenrain=1.000
+spell.area.damage.factor.polarvortex=1.000
+spell.area.damage.factor.ghastlytouch=1.000
+spell.area.damage.factor.aidoftheheavens=1.000
+
 [equipment]
 timer.stoneskin.artifact.avenger=20.000
 timer.stoneskin.artifact.sunblade=45.000
