--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -721,6 +721,7 @@ spell.area.damage.factor.gpythonsting=1.400
 spell.area.damage.factor.earthenrain=1.000
 spell.area.damage.factor.polarvortex=1.000
 spell.area.damage.factor.aidoftheheavens=1.200
+spell.area.damage.factor.chainlightning=1.000
 
 [equipment]
 timer.stoneskin.artifact.avenger=20.000
