Fixing some duplicate properties.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -232,7 +232,6 @@ damage.totalOutput.racial.Beholderkin=0.900
 damage.totalOutput.racial.Archon=1.000
 damage.totalOutput.racial.Asura=1.000
 damage.totalOutput.racial.Bralani=1.000
-damage.totalOutput.racial.Deva=1.100
 damage.totalOutput.racial.Skeleton=1.000
 damage.totalOutput.racial.Zombie=1.000
 damage.totalOutput.racial.Spectre=1.000
@@ -326,7 +325,6 @@ damage.pulse.racial.Beholderkin=8.000
 damage.pulse.racial.Archon=12.000
 damage.pulse.racial.Bralani=10.000
 damage.pulse.racial.Asura=10.500
-damage.pulse.racial.Deva=10.500
 damage.pulse.racial.Titan=14.000
 damage.pulse.racial.Avatar=14.000
 damage.pulse.racial.Skeleton=12.000
@@ -507,7 +505,6 @@ spellcast.pulse.racial.SnowOgre=1.000
 spellcast.pulse.racial.Beholderkin=1.000
 spellcast.pulse.racial.Skeleton=1.000
 spellcast.pulse.racial.Shadow=1.000
-spellcast.pulse.racial.Deva=1.000
 spellcast.pulse.racial.Wraith=1.000
 spellcast.pulse.racial.Spectre=1.000
 spellcast.pulse.racial.Zombie=1.000
@@ -1527,7 +1524,7 @@ stats.int.Shadow=120.000
 stats.wis.Shadow=105.000
 stats.cha.Shadow=25.000
 stats.kar.Shadow=25.000
-stats.luc.Deva=100.000
+stats.luc.Shadow=100.000
 stats.str.Deva=75.000
 stats.dex.Deva=100.000
 stats.agi.Deva=200.000
@@ -1568,16 +1565,6 @@ stats.wis.Bralani=110.000
 stats.cha.Bralani=25.000
 stats.kar.Bralani=25.000
 stats.luc.Bralani=100.000
-stats.str.Deva=75.000
-stats.dex.Deva=100.000
-stats.agi.Deva=200.000
-stats.con.Deva=95.000
-stats.pow.Deva=135.000
-stats.int.Deva=120.000
-stats.wis.Deva=105.000
-stats.cha.Deva=25.000
-stats.kar.Deva=25.000
-stats.luc.Deva=100.000
 stats.str.Titan=350.000
 stats.dex.Titan=80.000
 stats.agi.Titan=100.000
@@ -1761,7 +1748,6 @@ innate.shrug.Pillithid=40.000
 innate.shrug.WoodElf=5.000
 innate.shrug.Bralani=35.000
 innate.shrug.Asura=20.000
-innate.shrug.Deva=60.000
 innate.shrug.Titan=30.000
 innate.shrug.Avatar=30.000
 innate.shrug.Ghaele=50.000
@@ -2319,7 +2305,6 @@ gain.exp.mod.victim.race.Reptile=0.850
 gain.exp.mod.victim.race.Revenant=1.100
 gain.exp.mod.victim.race.Shade=1.000
 gain.exp.mod.victim.race.Shadow=1.100
-gain.exp.mod.victim.race.Deva=1.100
 gain.exp.mod.victim.race.Deva=1.100
 gain.exp.mod.victim.race.ShadowBeast=1.000
 gain.exp.mod.victim.race.Skeleton=1.100
