Super Cannon code!

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -2355,3 +2355,6 @@ logs.chat.status=0.000
 [justice]
 justice.alarms.evil=0.000
 justice.alarms.good=1.000
+[super cannon]
+cannon.super.range=200.000
+cannon.super.max.z=15.000
