Making epic payouts modifiable per racewar side, upgrading vamp on hellfire/holy sac.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -59,11 +59,11 @@ vamping.vampiricTouch.berserkers=0.100
 vamping.vampiricTouch.rogues=0.100
 vamping.vampiricTouch.paladins=0.100
 vamping.vampiricTouch.rangers=0.100
-vamping.hellfire=1.000
+vamping.hellfire=1.300
 vamping.hellfire.absorb=0.160
 vamping.battleEcstasy=0.120
 vamping.self.NPCbattleEcstasy=0.050
-vamping.holySacrifice=0.050
+vamping.holySacrifice=0.100
 vamping.vampiricTrance=0.200
 vamping.undeadNpc=0.100
 vamping.innateUndead=0.040
@@ -150,6 +150,8 @@ damage.modifier.sitting=1.150
 damage.modifier.kneeling=1.300
 damage.modifier.lying=1.500
 damage.modifier.npcToPc=2.100
+damage.modifier.npcToPc.good=1.000
+damage.modifier.npcToPc.evil=1.000
 damage.modifier.slaying=1.050
 damage.meleeFactor=1.000
 damage.modifier.weaponDice=1.200
@@ -1941,6 +1943,8 @@ epic.errandStep=200.000
 epic.skillPointStep=100.000
 epic.monolith.activeTime=60.000
 epic.skillGain=10.000
+epic.gain.modifier.good=1.000
+epic.gain.modifier.evil=1.000
 epic.prestigeNotch=400.000
 epic.progressFactor=30.000
 epic.feeding.hours.monolith=12.000
