Some halloween trickery.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -2363,3 +2363,5 @@ justice.alarms.good=1.000
 [super cannon]
 cannon.super.range=200.000
 cannon.super.max.z=15.000
+halloween=0.000
+halloween.zombie.chance=5.000
