--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -59,6 +59,7 @@ vamping.vampiricTouch.berserkers=0.100
 vamping.vampiricTouch.rogues=0.100
 vamping.vampiricTouch.paladins=0.100
 vamping.vampiricTouch.rangers=0.100
+vamping.vampiricTouch.dreadaven=0.100
 vamping.hellfire=0.800
 vamping.hellfire.absorb=0.160
 vamping.battleEcstasy=0.120
