Archery upgrade for outposts.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -641,6 +641,11 @@ outpost.materials.apply.rate=1.000
 outpost.materials.death.convert=0.500
 outpost.materials.death.convert.carpenter=0.750
 outpost.materials.applied.default=100.000
+outpost.cost.archers=10000000.000
+outpost.archers.hit.chance=90.000
+outpost.archers.dice.hit=5.000
+outpost.archers.dice.dam=5.000
+outpost.archers.crit.multi=1.000
 [spells]
 spell.GuardianSpirit=0.750
 spell.apocalypse.maxAffected=4.000
