Few more fixes to ctf, made the slowness affect a property, added in ctf reset command, cant carry flag through illusionist gate, undead fealty no longer works.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -2390,3 +2390,5 @@ zombies.game.maxlevel=50.000
 zombies.game.spawn.delay=30.000
 zombies.game.standby.delay=15.000
 zombies.game.load=3446.000
+[ctf]
+ctf.slowness=3.000
