Fixing issue with headbutt being nigh unusable at low level

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -2407,5 +2407,6 @@ zombies.game.load=3446.000
 [ctf]
 ctf.slowness=3.000
 [char creation]
-charcreation.stat.max=100.000
-charcreation.stat.min=30.000
+char.creation.stat.max=100.000
+char.creation.stat.min=30.000
+char.creation.allocate.amt=200.000
