--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1,5 +1,5 @@
 [Agility AC mod]
-agi.def.minus=335.000
+agi.def.minus=355.000
 [Berserker altar minimum level requirement]
 berserker.quest.level.req.min=41.000
 [Multi-class altar minimum level requirement]
@@ -37,27 +37,23 @@ artifact.feeding.epic.typeMod.nexusStone=1.000
 artifact.feeding.switch.timer.min=30.000
 artifact.feeding.switch.lootallowance.min=15.000
 [backstab]
-#final multiplier is applied to both dices and damroll
 backstab.finalMultiplier=1.000
-#multiplier for dice only
 backstab.diceMultiplier=0.750
-#damage roll mod
 backstab.DamrollMultiplier=0.500
-#strdex bonus
 backstab.StrDexMultiplier=0.250
-backstab.SpinalTap=0.250
-backstab.CriticalStab=0.200
+backstab.SpinalTap.chance=0.250
+backstab.CriticalStab.chance=0.200
 backstab.CriticalStab.Multiplier=0.150
 backstab.AwareModifier=0.250
 [dragons]
-dragon.Breath.area.minChance=100.000
-dragon.Breath.area.chanceStep=20.000
-dragon.Breath.savedDamage=2.000
-dragon.Breath.DamageMod=30.000
-dragon.Breath.SavingThrowMod=0.000
+dragon.Breath.area.minChance=20.000
+dragon.Breath.area.chanceStep=10.000
+dragon.Breath.savedDamage=1.000
+dragon.Breath.DamageMod=1.000
+dragon.Breath.SavingThrowMod=1.000
 dragon.Rake.DamageMod=1.000
-dragon.Furious.DamageMod=2.000
-dragon.Rake.Attack.base=60.000
+dragon.Furious.DamageMod=1.000
+dragon.Rake.Attack.base=1.000
 [vamping]
 vamping.vampiricTouch=0.250
 vamping.vampiricTouch.monks=0.005
@@ -93,21 +89,23 @@ map.verticalFactor=0.600
 map.shout.range=40.000
 map.shout.sizeFactor=4.000
 [hitting]
-to.hit.GreaterRaceTypes=13.000
-to.hit.WarriorTypes=10.000
+to.hit.GreaterRaceTypes=15.000
+to.hit.WarriorTypes=16.000
 to.hit.HitterTankTypes=8.000
-to.hit.RogueTypes=7.000
-to.hit.ClericTypes=6.000
-to.hit.MageTypes=4.000
+to.hit.RogueTypes=12.000
+to.hit.ClericTypes=10.000
+to.hit.MageTypes=6.000
 to.hit.OtherNPCTypes=10.000
 to.hit.ProtUndead=0.700
 [damage]
 damage.pcs.vs.pets=2.000
 damage.spell.multiplier=1.000
 damroll.mod=0.350
-damage.mob.bonus=0.750
-damage.damrollCap=100.000
-damage.eliteBonus=1.250
+damage.mob.bonus=1.000
+damage.damrollCap=60.000
+damage.eliteBonus=1.100
+damage.devastatingCritical.mult=1.750
+damage.Critical.mult=1.500
 damage.reduction.sanctuary=0.750
 damage.reduction.sanctuary.paladin.groupMod=0.035
 damage.reduction.trollskin=0.750
@@ -136,7 +134,7 @@ damage.reduction.biofeedback=0.650
 damage.reduction.ironwood=0.800
 damage.reduction.icearmor=0.750
 damage.reduction.negarmor=0.750
-damage.reduction.skinSpell.deduct=46.000
+damage.reduction.skinSpell.deduct=25.000
 damage.reduction.chaosshield.mod=0.900
 damage.reduction.swashbuckler=0.800
 damage.increase.elementalPower=1.250
@@ -157,7 +155,7 @@ damage.shield.fireCold=0.500
 damage.shield.neg=0.200
 damage.shield.soul=0.200
 damage.modifier.flank=1.200
-damage.modifier.circle=2.000
+damage.modifier.circle=1.750
 damage.modifier.sitting=1.150
 damage.modifier.kneeling=1.300
 damage.modifier.lying=1.500
@@ -166,102 +164,102 @@ damage.modifier.npcToPc.good=1.000
 damage.modifier.npcToPc.evil=1.000
 damage.modifier.slaying=1.050
 damage.meleeFactor=1.000
-damage.modifier.weaponDice=3.000
+damage.modifier.weaponDice=1.000
 damage.modifier.vicious.strike=1.050
 damage.modifier.divineforce=1.250
 damage.modifier.meleemastery=1.100
 damage.totalOutput.racial.None=1.000
 damage.totalOutput.racial.Human=1.000
-damage.totalOutput.racial.Barbarian=1.050
-damage.totalOutput.racial.DrowElf=0.950
-damage.totalOutput.racial.GreyElf=0.900
+damage.totalOutput.racial.Barbarian=1.000
+damage.totalOutput.racial.DrowElf=1.000
+damage.totalOutput.racial.GreyElf=1.000
 damage.totalOutput.racial.MountainDwarf=1.000
 damage.totalOutput.racial.DuergarDwarf=1.000
-damage.totalOutput.racial.Halfling=0.850
-damage.totalOutput.racial.Gnome=0.900
-damage.totalOutput.racial.Ogre=1.200
-damage.totalOutput.racial.Troll=1.050
-damage.totalOutput.racial.Half-Elf=0.950
-damage.totalOutput.racial.Illithid=0.900
+damage.totalOutput.racial.Halfling=1.000
+damage.totalOutput.racial.Gnome=1.000
+damage.totalOutput.racial.Ogre=1.000
+damage.totalOutput.racial.Troll=1.000
+damage.totalOutput.racial.Half-Elf=1.000
+damage.totalOutput.racial.Illithid=1.000
 damage.totalOutput.racial.Orc=1.000
-damage.totalOutput.racial.Orog=1.050
+damage.totalOutput.racial.Orog=1.000
 damage.totalOutput.racial.Thri-Kreen=1.000
 damage.totalOutput.racial.Centaur=1.000
-damage.totalOutput.racial.Githyanki=1.050
-damage.totalOutput.racial.Minotaur=1.100
-damage.totalOutput.racial.Shade=0.850
-damage.totalOutput.racial.Revenant=1.050
-damage.totalOutput.racial.Goblin=0.850
-damage.totalOutput.racial.Lich=0.750
-damage.totalOutput.racial.Vampire=0.950
+damage.totalOutput.racial.Githyanki=1.000
+damage.totalOutput.racial.Minotaur=1.000
+damage.totalOutput.racial.Shade=1.000
+damage.totalOutput.racial.Revenant=1.000
+damage.totalOutput.racial.Goblin=1.000
+damage.totalOutput.racial.Lich=1.000
+damage.totalOutput.racial.Vampire=1.000
 damage.totalOutput.racial.Ghaele=1.000
-damage.totalOutput.racial.DeathKnight=1.150
-damage.totalOutput.racial.ShadowBeast=1.100
-damage.totalOutput.racial.StormGiant=1.100
+damage.totalOutput.racial.DeathKnight=1.000
+damage.totalOutput.racial.ShadowBeast=1.000
+damage.totalOutput.racial.StormGiant=1.000
 damage.totalOutput.racial.Wight=1.000
-damage.totalOutput.racial.Phantom=0.850
-damage.totalOutput.racial.Harpy=0.850
-damage.totalOutput.racial.Gargoyle=1.050
+damage.totalOutput.racial.Phantom=1.000
+damage.totalOutput.racial.Harpy=1.000
+damage.totalOutput.racial.Gargoyle=1.000
 damage.totalOutput.racial.FireElemental=1.000
-damage.totalOutput.racial.AirElemental=0.850
-damage.totalOutput.racial.WaterElemental=1.100
-damage.totalOutput.racial.EarthElemental=1.200
-damage.totalOutput.racial.Demon=1.250
-damage.totalOutput.racial.Devil=1.250
-damage.totalOutput.racial.Undead=0.750
-damage.totalOutput.racial.Ghost=0.700
-damage.totalOutput.racial.Lycanthrope=1.200
-damage.totalOutput.racial.Giant=1.100
-damage.totalOutput.racial.HalfOrc=0.950
-damage.totalOutput.racial.Golem=1.150
-damage.totalOutput.racial.Faerie=0.750
-damage.totalOutput.racial.Dragon=1.300
-damage.totalOutput.racial.Dragonkin=1.100
-damage.totalOutput.racial.Reptile=0.800
-damage.totalOutput.racial.Snake=0.700
-damage.totalOutput.racial.Insect=0.200
-damage.totalOutput.racial.Arachnid=0.800
-damage.totalOutput.racial.AquaticAnimal=0.700
-damage.totalOutput.racial.FlyingAnimal=0.900
+damage.totalOutput.racial.AirElemental=1.000
+damage.totalOutput.racial.WaterElemental=1.000
+damage.totalOutput.racial.EarthElemental=1.000
+damage.totalOutput.racial.Demon=1.000
+damage.totalOutput.racial.Devil=1.000
+damage.totalOutput.racial.Undead=1.000
+damage.totalOutput.racial.Ghost=1.000
+damage.totalOutput.racial.Lycanthrope=1.000
+damage.totalOutput.racial.Giant=1.000
+damage.totalOutput.racial.HalfOrc=1.000
+damage.totalOutput.racial.Golem=1.000
+damage.totalOutput.racial.Faerie=1.000
+damage.totalOutput.racial.Dragon=1.000
+damage.totalOutput.racial.Dragonkin=1.000
+damage.totalOutput.racial.Reptile=1.000
+damage.totalOutput.racial.Snake=1.000
+damage.totalOutput.racial.Insect=1.000
+damage.totalOutput.racial.Arachnid=1.000
+damage.totalOutput.racial.AquaticAnimal=1.000
+damage.totalOutput.racial.FlyingAnimal=1.000
 damage.totalOutput.racial.Quadraped=1.000
-damage.totalOutput.racial.Primate=1.050
+damage.totalOutput.racial.Primate=1.000
 damage.totalOutput.racial.Humanoid=1.000
-damage.totalOutput.racial.Animal=0.500
-damage.totalOutput.racial.Plant=0.750
-damage.totalOutput.racial.Herbivore=0.700
-damage.totalOutput.racial.Carnivore=1.050
-damage.totalOutput.racial.Parasite=0.150
-damage.totalOutput.racial.Beholder=1.100
-damage.totalOutput.racial.Dracolich=1.150
-damage.totalOutput.racial.Titan=1.150
-damage.totalOutput.racial.Avatar=1.150
-damage.totalOutput.racial.Slime=0.800
-damage.totalOutput.racial.Githzerai=0.950
+damage.totalOutput.racial.Animal=1.000
+damage.totalOutput.racial.Plant=1.000
+damage.totalOutput.racial.Herbivore=1.000
+damage.totalOutput.racial.Carnivore=1.000
+damage.totalOutput.racial.Parasite=1.000
+damage.totalOutput.racial.Beholder=1.000
+damage.totalOutput.racial.Dracolich=1.000
+damage.totalOutput.racial.Titan=1.000
+damage.totalOutput.racial.Avatar=1.000
+damage.totalOutput.racial.Slime=1.000
+damage.totalOutput.racial.Githzerai=1.000
 damage.totalOutput.racial.Angel=1.000
 damage.totalOutput.racial.Rakshasa=1.000
-damage.totalOutput.racial.Efreet=1.150
-damage.totalOutput.racial.SnowOgre=1.200
-damage.totalOutput.racial.Beholderkin=0.600
+damage.totalOutput.racial.Efreet=1.000
+damage.totalOutput.racial.SnowOgre=1.000
+damage.totalOutput.racial.Beholderkin=1.000
 damage.totalOutput.racial.Archon=1.000
 damage.totalOutput.racial.Asura=1.000
 damage.totalOutput.racial.Bralani=1.000
-damage.totalOutput.racial.Skeleton=0.800
-damage.totalOutput.racial.Zombie=1.100
-damage.totalOutput.racial.Spectre=1.050
-damage.totalOutput.racial.Wraith=0.800
-damage.totalOutput.racial.Shadow=1.100
+damage.totalOutput.racial.Skeleton=1.000
+damage.totalOutput.racial.Zombie=1.000
+damage.totalOutput.racial.Spectre=1.000
+damage.totalOutput.racial.Wraith=1.000
+damage.totalOutput.racial.Shadow=1.000
 damage.totalOutput.racial.Deva=1.000
 damage.totalOutput.racial.Drider=1.000
-damage.totalOutput.racial.PurpleWorm=1.100
-damage.totalOutput.racial.Agathinon=0.900
+damage.totalOutput.racial.PurpleWorm=1.000
+damage.totalOutput.racial.Agathinon=1.000
 damage.totalOutput.racial.VoidElemental=1.000
 damage.totalOutput.racial.IceElemental=1.000
-damage.totalOutput.racial.Eladrin=0.750
-damage.totalOutput.racial.Kobold=0.800
-damage.totalOutput.racial.Pillithid=0.650
-damage.totalOutput.racial.KuoToa=1.050
-damage.totalOutput.racial.WoodElf=0.950
-damage.totalOutput.racial.Firbolg=1.100
+damage.totalOutput.racial.Eladrin=1.000
+damage.totalOutput.racial.Kobold=1.000
+damage.totalOutput.racial.Pillithid=1.000
+damage.totalOutput.racial.KuoToa=1.000
+damage.totalOutput.racial.WoodElf=1.000
+damage.totalOutput.racial.Firbolg=1.000
 damage.pulse.class.all=2.000
 damage.pulse.racial.None=13.000
 damage.pulse.racial.Human=14.000
@@ -308,7 +306,7 @@ damage.pulse.racial.Giant=16.000
 damage.pulse.racial.HalfOrc=12.000
 damage.pulse.racial.Golem=17.000
 damage.pulse.racial.Faerie=10.000
-damage.pulse.racial.Dragon=17.000
+damage.pulse.racial.Dragon=18.000
 damage.pulse.racial.Dragonkin=15.000
 damage.pulse.racial.Reptile=13.000
 damage.pulse.racial.Snake=13.000
@@ -356,34 +354,34 @@ damage.pulse.racial.KuoToa=15.000
 damage.pulse.racial.WoodElf=14.000
 damage.pulse.racial.Firbolg=14.000
 damage.totalOutput.class.None=1.000
-damage.totalOutput.class.Warrior=1.100
-damage.totalOutput.class.Ranger=1.050
-damage.totalOutput.class.Psionicist=0.800
-damage.totalOutput.class.Paladin=1.150
-damage.totalOutput.class.Anti-Paladin=1.050
-damage.totalOutput.class.Cleric=0.900
-damage.totalOutput.class.Monk=1.050
+damage.totalOutput.class.Warrior=1.000
+damage.totalOutput.class.Ranger=1.000
+damage.totalOutput.class.Psionicist=1.000
+damage.totalOutput.class.Paladin=1.000
+damage.totalOutput.class.Anti-Paladin=1.000
+damage.totalOutput.class.Cleric=1.000
+damage.totalOutput.class.Monk=1.000
 damage.totalOutput.class.Druid=1.000
-damage.totalOutput.class.Shaman=0.900
+damage.totalOutput.class.Shaman=1.000
 damage.totalOutput.class.Ethermancer=1.000
-damage.totalOutput.class.Sorcerer=0.800
+damage.totalOutput.class.Sorcerer=1.000
 damage.totalOutput.class.Necromancer=1.000
-damage.totalOutput.class.Conjurer=0.800
-damage.totalOutput.class.Rogue=0.900
-damage.totalOutput.class.Assassin=0.900
+damage.totalOutput.class.Conjurer=1.000
+damage.totalOutput.class.Rogue=1.000
+damage.totalOutput.class.Assassin=1.000
 damage.totalOutput.class.Mercenary=1.000
-damage.totalOutput.class.Bard=1.200
-damage.totalOutput.class.Thief=0.900
-damage.totalOutput.class.Warlock=0.900
-damage.totalOutput.class.MindFlayer=0.900
+damage.totalOutput.class.Bard=1.000
+damage.totalOutput.class.Thief=1.000
+damage.totalOutput.class.Warlock=1.000
+damage.totalOutput.class.MindFlayer=1.000
 damage.totalOutput.class.Alchemist=1.000
-damage.totalOutput.class.Berserker=0.850
-damage.totalOutput.class.Reaver=1.050
+damage.totalOutput.class.Berserker=1.000
+damage.totalOutput.class.Reaver=1.000
 damage.totalOutput.class.Illusionist=1.000
 damage.totalOutput.class.Unholy-Piper=1.000
 damage.totalOutput.class.Dreadlord=1.000
 damage.totalOutput.class.Avenger=1.000
-damage.totalOutput.class.Theurgist=0.900
+damage.totalOutput.class.Theurgist=1.000
 damage.pulse.class.None=0.000
 damage.pulse.class.Warrior=0.000
 damage.pulse.class.Ranger=-0.500
@@ -488,7 +486,7 @@ spellcast.pulse.racial.Giant=1.300
 spellcast.pulse.racial.HalfOrc=1.000
 spellcast.pulse.racial.Golem=1.400
 spellcast.pulse.racial.Faerie=0.750
-spellcast.pulse.racial.Dragon=1.200
+spellcast.pulse.racial.Dragon=-1.000
 spellcast.pulse.racial.Dragonkin=0.950
 spellcast.pulse.racial.Reptile=1.000
 spellcast.pulse.racial.Snake=1.000
