--- a/src/ships/Makefile.osx
+++ b/src/ships/Makefile.osx
@@ -4,8 +4,8 @@
 #
 # Compilers CCPP --> C++, and CC --> C.
 #
-CCPP = g++
-CC = gcc
+CCPP = /usr/bin/g++-4.2
+#CC = gcc
 
 #
 # Compiler command used to build dependencies.
@@ -16,7 +16,7 @@ DEPEND = $(CCPP) -MM
 # Compiler flags.
 #
 # Turn on -O3 for the production version!
-COMPILER_FLAGS = -g -Wall -Wno-write-strings -m32 #-arch x86_32
+COMPILER_FLAGS = -g -Wall -Wno-write-strings -arch i386 -fno-stack-protector
 PROFILE_FLAGS = #-pg -static
 #INCLUDES = -I/usr/local/mysql-i386/include -I/usr/include/mysql
 INCLUDES  = -I. -I/usr/include/libxml2 -I/usr/local/include/mysql -I./ships
